lab1/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-server
spec:
  containers:
  - image: mycluster.icp:8500/default/nginx:latest
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
