lab1/nodejs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-server
spec:
  containers:
  - image: mycluster.icp:8500/default/hello-node:latest
    name: nginx
    ports:
    - containerPort: 8000
      protocol: TCP
